# python-file-sync

./: .gitignore  LICENSE  README.md  init.bat  pyproject.toml
batch/: build.bat  upload_test.bat
src/file_sync_ichir0roie/: file_sync.py
src/sync_env_ichir0roie/: sync_env.py
tests/direct/: basics.py
tests/module/tests/: basics.py  test_basics.py
