[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync_env_ichir0roie"
version = "0.0.2"
authors = [
  { name="ichir0roioe", email="ichir0roie@gmail.com" },
]
description = "environment"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
"Homepage" = "https://github.com/ichir0roie/python-file-sync"
"Bug Tracker" = "https://github.com/ichir0roie/python-file-sync/issues"